# fastapi-mqtt-boilerplate

./: .gitignore  .pre-commit-config.yaml  .tool-versions  Makefile  README.md  pyproject.toml  ruff.toml
app/: main.py
app/routers/api/: __init__.py
docker/: docker-compose.yml
docker/app/: Dockerfile
tests/routers/api/: test_health.py
