[project]
name = "fastapi-mqtt-boilerplate"
version = "0.1.0"
description = ""
authors = [
    {name = "massimobiagioli",email = "biagiolimassimo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-xdist = "^3.6.1"
pre-commit = "^4.2.0"
ruff = "^0.11.4"

